--- a/src/app/shared/forms/offer/price-plans/price-component-drawer/price-component-drawer.component.html
+++ b/src/app/shared/forms/offer/price-plans/price-component-drawer/price-component-drawer.component.html
@@ -158,7 +158,7 @@
         </div>
       } @else if (priceComponentForm.get('priceType')?.value === 'usage') {
       <div class="flex flex-row">
-        <select id="type" (change)="changePriceComponentUsageSpec($event)" 
+        <select id="type" data-cy="usageInput" (change)="changePriceComponentUsageSpec($event)" 
           class="mb-2 mr-2 bg-gray-50 dark:bg-secondary-300 border border-gray-300 dark:border-secondary-200 dark:text-gray-100 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
             @if(!selectedUsageSpec){
               <option value="">Select a usage specification</option>
@@ -175,7 +175,7 @@
             }
           </select>
           @if(showMetricSelect){
-              <select id="type" (change)="changePriceComponentMetric($event)"
+              <select data-cy="usageMetric" id="type" (change)="changePriceComponentMetric($event)"
               class="mb-2 bg-gray-50 dark:bg-secondary-300 border border-gray-300 dark:border-secondary-200 dark:text-gray-100 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"> 
                   @if(!selectedMetric){
                     @for(metric of selectedUsageSpec.specCharacteristic; track metric){
