--- a/src/app/pages/admin/categories/categories.component.html
+++ b/src/app/pages/admin/categories/categories.component.html
@@ -16,7 +16,7 @@
         </div>
 
       </div>
-      <div class="flex w-full flex-col items-center md:flex-row justify-between">
+      <!-- <div class="flex w-full flex-col items-center md:flex-row justify-between">
 
         <div class="p-8 w-full">
           <div class="flex flex-row mb-1">
@@ -78,7 +78,7 @@
           </div>
       </div>
 
-    </div>
+    </div>-->
   </div>
 
 @if(loading){
