--- a/src/app/shared/billing-account-form/billing-account-form.component.html
+++ b/src/app/shared/billing-account-form/billing-account-form.component.html
@@ -24,7 +24,7 @@
     </div>
     <div>
         <label for="address.country" class="mb-3 block text-sm font-semibold leading-none text-body-dark dark:text-white">{{ 'BILLING._country' | translate }} (*)</label>
-        <input id="address.country" formControlName="country" name="address.country" type="text"
+        <!--<input id="address.country" formControlName="country" name="address.country" type="text"
         [ngClass]="billingForm.get('country')?.touched && billingForm.get('country')?.invalid
         ? 'border-red-600'
         : 'border-gray-300 dark:border-secondary-200'" 
@@ -34,7 +34,12 @@
         }
         @if(billingForm.get('country')?.invalid && billingForm.get('country')?.errors?.['maxlength']){
             <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">{{ 'BILLING._too_long' | translate }}</span></p>
-        }
+        }-->
+        <select id="country" formControlName="country" class=""class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+            <option *ngFor="let country of euCountries" [value]="country.code">
+              {{ country.name }}
+            </option>
+        </select>
     </div>
     <div>
         <label for="address.city" class="mb-3 block text-sm font-semibold leading-none text-body-dark dark:text-white">{{ 'BILLING._city' | translate }} (*)</label>
