--- a/src/app/shared/forms/offer/offer.component.html
+++ b/src/app/shared/forms/offer/offer.component.html
@@ -39,97 +39,106 @@
     </ol>
 
     <h3 class="block md:hidden mt-2 text-center text-2xl text-primary-100 dark:text-white pb-4">{{ this.steps[currentStep] }}</h3>
-
+    @if(loading){
+      <div role="status" class="w-full h-full flex justify-center align-middle">
+          <svg aria-hidden="true" class="w-12 h-12 text-gray-200 animate-spin dark:text-gray-600 fill-secondary-400" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/>
+              <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/>
+          </svg>
+          <span class="sr-only">Loading...</span>
+          </div>
+    } @else {
 
     <div class="md:p-8">
-      <!-- Step Forms -->
-      @if (currentStep === 0) {
-        <app-general-info-form 
-          [data]="offer" 
-          [formType]="formType" 
-          [form]="productOfferForm.controls['generalInfo']"
-          (formChange)="handleSubformChange($event)">
-        </app-general-info-form>
-      } @else if (currentStep === 1) {
-        <app-prod-spec-form formControlName="prodSpec"
-                            [data]="offer"
-                            [partyId]="partyId"
+
+        <!-- Step Forms -->
+        @if (currentStep === 0) {
+          <app-general-info-form 
+            [data]="offer" 
+            [formType]="formType" 
+            [form]="productOfferForm.controls['generalInfo']"
+            (formChange)="handleSubformChange($event)">
+          </app-general-info-form>
+        } @else if (currentStep === 1) {
+          <app-prod-spec-form formControlName="prodSpec"
+                              [data]="offer"
+                              [partyId]="partyId"
+                              [formType]="formType"
+                              (formChange)="handleSubformChange($event)">
+          </app-prod-spec-form>
+        } @else if (currentStep === 2) {
+          @if(this.formType=='update'){
+            <app-category-form formControlName="category" 
+                            [data]="offer" 
                             [formType]="formType"
                             (formChange)="handleSubformChange($event)">
-        </app-prod-spec-form>
-      } @else if (currentStep === 2) {
-        @if(this.formType=='update'){
-          <app-category-form formControlName="category" 
-                           [data]="offer" 
-                           [formType]="formType"
-                           (formChange)="handleSubformChange($event)">
-          </app-category-form>
-        }@else{
-          <app-catalogue formControlName="catalogue" [partyId]="partyId"></app-catalogue>
-        }        
-      } @else if (currentStep === 3){
-        @if(this.formType=='update'){
-          <app-license-form [data]="offer" 
-                          [formType]="formType" 
-                          [form]="productOfferForm.controls['license']"
-                          (formChange)="handleSubformChange($event)">
-          </app-license-form>
-        }@else{
-          <app-category-form formControlName="category" 
-                           [data]="offer" 
-                           [formType]="formType"
-                           (formChange)="handleSubformChange($event)">
-          </app-category-form>
-        }
-      } @else if (currentStep === 4) {
-        @if(this.formType=='update'){
-          <app-price-plans-form 
-            [form]="productOfferForm" 
-            [prodSpec]="productOfferForm.get('prodSpec')?.value"
-            (formChange)="handleSubformChange($event)">
-          </app-price-plans-form>
-        }@else{
-          <app-license-form [data]="offer" 
-                          [formType]="formType" 
-                          [form]="productOfferForm.controls['license']"
-                          (formChange)="handleSubformChange($event)">
-          </app-license-form>
-        }
-      } @else if (currentStep === 5) {
-        @if(this.formType=='update'){
-          <app-procurement-mode [data]="offer" 
-            [form]="productOfferForm.controls['procurementMode']"
-            [formType]="formType"
-            (formChange)="handleSubformChange($event)">
-          </app-procurement-mode>
-        }@else{
-          <app-price-plans-form [form]="productOfferForm" 
-                              [prodSpec]="productOfferForm.get('prodSpec')?.value"
-                              (formChange)="handleSubformChange($event)">
-          </app-price-plans-form>
-        }         
-      } @else if (currentStep === 6) {
-        @if(this.formType=='update'){
-          <!--<app-replication-visibility></app-replication-visibility>-->
+            </app-category-form>
+          }@else{
+            <app-catalogue formControlName="catalogue" [partyId]="partyId"></app-catalogue>
+          }        
+        } @else if (currentStep === 3){
+          @if(this.formType=='update'){
+            <app-license-form [data]="offer" 
+                            [formType]="formType" 
+                            [form]="productOfferForm.controls['license']"
+                            (formChange)="handleSubformChange($event)">
+            </app-license-form>
+          }@else{
+            <app-category-form formControlName="category" 
+                            [data]="offer" 
+                            [formType]="formType"
+                            (formChange)="handleSubformChange($event)">
+            </app-category-form>
+          }
+        } @else if (currentStep === 4) {
+          @if(this.formType=='update'){
+            <app-price-plans-form 
+              [form]="productOfferForm" 
+              [prodSpec]="productOfferForm.get('prodSpec')?.value"
+              (formChange)="handleSubformChange($event)">
+            </app-price-plans-form>
+          }@else{
+            <app-license-form [data]="offer" 
+                            [formType]="formType" 
+                            [form]="productOfferForm.controls['license']"
+                            (formChange)="handleSubformChange($event)">
+            </app-license-form>
+          }
+        } @else if (currentStep === 5) {
+          @if(this.formType=='update'){
+            <app-procurement-mode [data]="offer" 
+              [form]="productOfferForm.controls['procurementMode']"
+              [formType]="formType"
+              (formChange)="handleSubformChange($event)">
+            </app-procurement-mode>
+          }@else{
+            <app-price-plans-form [form]="productOfferForm" 
+                                [prodSpec]="productOfferForm.get('prodSpec')?.value"
+                                (formChange)="handleSubformChange($event)">
+            </app-price-plans-form>
+          }         
+        } @else if (currentStep === 6) {
+          @if(this.formType=='update'){
+            <!--<app-replication-visibility></app-replication-visibility>-->
+            <app-offer-summary [productOfferForm]="productOfferForm"></app-offer-summary>
+          }@else{
+            <!--<app-replication-visibility></app-replication-visibility>-->
+            <app-procurement-mode [data]="offer" 
+              [formType]="formType" 
+              [form]="productOfferForm.controls['procurementMode']"
+              (formChange)="handleSubformChange($event)">
+            </app-procurement-mode>
+          }
+        } @else if(currentStep === 7) {
+          <!--@if(this.formType=='update'){
+            <app-offer-summary [productOfferForm]="productOfferForm"></app-offer-summary>
+          }@else{
+            <app-replication-visibility></app-replication-visibility>
+          }-->
           <app-offer-summary [productOfferForm]="productOfferForm"></app-offer-summary>
-        }@else{
-          <!--<app-replication-visibility></app-replication-visibility>-->
-          <app-procurement-mode [data]="offer" 
-            [formType]="formType" 
-            [form]="productOfferForm.controls['procurementMode']"
-            (formChange)="handleSubformChange($event)">
-          </app-procurement-mode>
         }
-      } @else if(currentStep === 7) {
-        <!--@if(this.formType=='update'){
-          <app-offer-summary [productOfferForm]="productOfferForm"></app-offer-summary>
-        }@else{
-          <app-replication-visibility></app-replication-visibility>
-        }-->
-        <app-offer-summary [productOfferForm]="productOfferForm"></app-offer-summary>
-      }
     </div>
-
+  }
     <!-- Navigation Buttons -->
     <div class="flex justify-end mt-6 space-x-4">
       <button (click)="goToStep(currentStep - 1)"
@@ -163,8 +172,8 @@
       </button>
       @if(formType === 'create' && currentStep === 7 || formType === 'update'){
         <button data-cy="offerFinish" (click)="submitForm()"
-        [disabled]="!productOfferForm.controls['generalInfo'].valid"
-        [ngClass]="formType === 'update' && !productOfferForm.controls['generalInfo'].valid ? 'opacity-50' : 'hover:bg-primary-50'"
+        [disabled]="!productOfferForm.controls['generalInfo'].valid || loading"
+        [ngClass]="loading || (formType === 'update' && !productOfferForm.controls['generalInfo'].valid) ? 'opacity-50' : 'hover:bg-primary-50'"
 
         class="px-4 py-2 text-base font-medium text-white rounded-lg bg-primary-100">
           {{ formType === 'create' ? 'Create Offer' : 'Update Offer' }}
