--- a/src/app/pages/product-orders/sections/order-info/order-info.component.html
+++ b/src/app/pages/product-orders/sections/order-info/order-info.component.html
@@ -35,7 +35,7 @@
                 <fa-icon [icon]="faSwatchbook" class="fa-base text-primary-100 align-middle mr-2"></fa-icon>
                 <h2 class="text-base dark:text-white font-bold">{{ 'PRODUCT_ORDERS._filter_state' | translate }}</h2>
             </div>
-            <button id="dropdownStateButton" data-dropdown-toggle="dropdown"
+            <button id="dropdownStateButton" data-dropdown-toggle="dropdown" (click)="$event.stopPropagation();"
                     class="text-black border border-primary-100sa dark:text-white w-full justify-between bg-white dark:bg-secondary-200 hover:bg-gray-100 dark:hover:bg-secondary-300 focus:ring-2 focus:outline-none focus:ring-primary-100 font-medium rounded-lg text-sm p-2.5 text-center inline-flex items-center"
                     type="button">
                 {{ 'PRODUCT_ORDERS._filter_state' | translate }}
@@ -51,7 +51,7 @@
                 </h6>
                 <ul class="space-y-2 text-sm" aria-labelledby="dropdownStateButton">
                     <li class="flex items-center">
-                        <input id="acknowledged" type="checkbox" value="" (change)="onStateFilterChange('acknowledged')"
+                        <input id="acknowledged" type="checkbox" value="" checked (change)="onStateFilterChange('acknowledged')"
                         class="w-4 h-4 bg-gray-100 checked:bg-primary-100 dark:checked:bg-primary-100 border-gray-300 rounded focus:ring-primary-100 dark:focus:ring-primary-100 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500" />
 
                         <label for="acknowledged" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
@@ -60,7 +60,7 @@
                     </li>
 
                     <li class="flex items-center">
-                        <input id="inProgress" type="checkbox" value="" (change)="onStateFilterChange('inProgress')"
+                        <input id="inProgress" type="checkbox" value="" checked (change)="onStateFilterChange('inProgress')"
                         class="w-4 h-4 bg-gray-100 checked:bg-primary-100 dark:checked:bg-primary-100 border-gray-300 rounded focus:ring-primary-100 dark:focus:ring-primary-100 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500" />
 
                         <label for="inProgress" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
@@ -69,7 +69,7 @@
                     </li>
 
                     <li class="flex items-center">
-                        <input id="completed" type="checkbox" value=""  (change)="onStateFilterChange('completed')"
+                        <input id="completed" type="checkbox" value="" checked (change)="onStateFilterChange('completed')"
                         class="w-4 h-4 bg-gray-100 checked:bg-primary-100 dark:checked:bg-primary-100 border-gray-300 rounded focus:ring-primary-100 dark:focus:ring-primary-100 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500" />
 
                         <label for="completed" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
@@ -87,7 +87,7 @@
                     </li>
 
                     <li class="flex items-center">
-                        <input id="pending" type="checkbox" value=""  (change)="onStateFilterChange('pending')"
+                        <input id="pending" type="checkbox" value="" checked (change)="onStateFilterChange('pending')"
                         class="w-4 h-4 bg-gray-100 checked:bg-primary-100 dark:checked:bg-primary-100 border-gray-300 rounded focus:ring-primary-100 dark:focus:ring-primary-100 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500" />
 
                         <label for="pending" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
@@ -103,14 +103,14 @@
                             {{ 'PRODUCT_ORDERS._cancelled' | translate }}
                         </label>
                     </li>
-                    <li class="flex items-center">
+                    <!--<li class="flex items-center">
                       <input id="unchecked" type="checkbox" value="" (change)="onStateFilterChange('unchecked')"
                       class="w-4 h-4 bg-gray-100 checked:bg-primary-100 dark:checked:bg-primary-100 border-gray-300 rounded focus:ring-primary-100 dark:focus:ring-primary-100 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500" />
 
                       <label for="unchecked" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
                           {{ 'PRODUCT_ORDERS._unchecked' | translate }}
                       </label>
-                  </li>
+                  </li>-->
                 </ul>
             </div>
         </div>
