--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -174,6 +174,19 @@
               </li>
             }
             <li>
+              <a
+                id="analytics"
+                [href]="analytics"
+                target="_blank"
+                class="flex w-full justify-left px-4 py-2 hover:bg-gray-100 
+                       dark:hover:bg-gray-600 dark:hover:text-white rounded text-left"
+                role="button"
+              >
+                <fa-icon [icon]="faPieChart" class="mr-2"></fa-icon>
+                Analytics
+              </a>
+            </li>            
+            <li>
               <button id="usageSpecs" (click)="goTo('/usage-spec')" class="flex w-full justify-left px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"><fa-icon [icon]="faRuler" class="mr-2"></fa-icon>Usage Spec</button>
             </li>
             <li>
