--- a/src/app/shared/cart-drawer/cart-drawer.component.html
+++ b/src/app/shared/cart-drawer/cart-drawer.component.html
@@ -1,79 +1,121 @@
+<div id="cart-drawer" (click)="$event.stopPropagation();" class="h-full flex flex-col" tabindex="-1"
+  aria-labelledby="cart-drawer-label" aria-hidden="true">
 
-<!-- drawer component -->
-<div id="cart-drawer" (click)="$event.stopPropagation();"  class="h-full flex flex-col" tabindex="-1" aria-labelledby="cart-drawer-label" aria-hidden="true">
-   <fa-icon class="mr-2 text-gray-500 dark:text-gray-400" [icon]="faCartShopping"></fa-icon>
-   <h3 id="cart-drawer-label" class="inline-flex items-center text-base font-semibold text-gray-500 dark:text-gray-400 text-xl" aria-hidden="true">
-      {{ 'CART_DRAWER._title' | translate }}
-   </h3>
-   <hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-700">
-   <button (click)="hideCart()" type="button" aria-controls="cart-drawer" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 absolute top-2.5 end-2.5 inline-flex items-center justify-center dark:hover:bg-gray-600 dark:hover:text-white" >
-      <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
-         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
-      </svg>
-      <span class="sr-only">{{ 'CART_DRAWER._close' | translate }}</span>
-   </button>
+  <fa-icon class="mr-2 text-gray-500 dark:text-gray-400" [icon]="faCartShopping"></fa-icon>
+  <h3 id="cart-drawer-label"
+    class="inline-flex items-center text-base font-semibold text-gray-500 dark:text-gray-400 text-xl"
+    aria-hidden="true">
+    {{ 'CART_DRAWER._title' | translate }}
+  </h3>
 
-   <div class="flex-1 w-full grid grid-flow-row auto-rows-max overflow-y-auto p-2">
-      @if(items.length > 0){
-         @for (item of items; track item) {
-            <div class="flex mt-2 mb-2 rounded-lg bg-secondary-50/95 dark:bg-gray-700 dark:border-gray-800 border-secondary-50 border">
-               <div class="flex flex-col w-full">
-                  <div class="flex justify-between w-full">
-                     <button type="button" (click)="goToProdDetails(item)" class="flex p-2 box-decoration-clone">
-                        @if (item.image) {
-                           <img class="rounded-t-lg w-fit h-[100px]" src="{{item.image}}" alt="">
-                        } @else {
-                           <img class="rounded-t-lg w-fit h-[100px]" src="https://placehold.co/600x400/svg" alt="">
-                        }
-                     </button>
-                     <div class="p-2 flex items-center w-2/3">
-                        <p class="text-lg text-gray-700 dark:text-gray-400 line-clamp-4 text-wrap break-all">{{item.name}}</p>
-                     </div>
-                  </div> 
-                  <div class="p-2 flex items-center flex-row">
-                     @if (item.options.pricing) {
-                        <div class="items-center text-sm text-white">
-                           @for (price of item.options.pricing; track price) {
-                              <div class="flex place-content-center flex-col">
-                                 <span class="font-bold text-gray-900 dark:text-primary-50 mr-3">{{ price['priceType'] }}:</span>
-                                 <span class="text-xs text-gray-900 dark:text-primary-50">{{ price['price']['taxIncludedAmount']['value'] }} {{ price['price']['taxIncludedAmount']['unit'] }}
-                                    @if(hasKey(price, 'recurringChargePeriod')){
-                                       / {{ price['recurringChargePeriod'] }}
-                                    }
-                                 </span>
-                              </div>
-                           }
-                           </div>
-                     }
-                     </div>
-               </div>
-               
-               <div class="p-2 flex items-center">
-                  <button type="button" (click)="deleteProduct(item)" class="h-fit text-blue-700 hover:bg-gray-300 hover:text-white focus:ring-4 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center dark:text-blue-500 dark:hover:text-white dark:hover:bg-gray-600">
-                     <svg class="w-[12px] h-[12px] text-gray-700 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
-                      </svg>
-                  </button>
-               </div>
+  <hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-700">
+
+  <!-- close button -->
+  <button (click)="hideCart()" type="button" aria-controls="cart-drawer"
+    class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 absolute top-2.5 end-2.5 inline-flex items-center justify-center dark:hover:bg-gray-600 dark:hover:text-white">
+    <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+    </svg>
+    <span class="sr-only">{{ 'CART_DRAWER._close' | translate }}</span>
+  </button>
+@if(loading){
+   <div role="status" class="w-full h-full flex justify-center align-middle">
+       <svg aria-hidden="true" class="w-12 h-12 text-gray-200 animate-spin dark:text-gray-600 fill-secondary-400" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
+           <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/>
+           <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/>
+       </svg>
+       <span class="sr-only">Loading...</span>
+     </div>
+} @else {
+  <!-- items per provider -->
+  <div class="flex-1 w-full grid grid-flow-row auto-rows-max overflow-y-auto p-2">
+
+    @if(items.length > 0){
+      @for (providerItems of items; track providerItems) {
+        <div class="mb-6 border border-gray-300 dark:border-gray-600 rounded-lg p-3">
+          <!--<h4 class="font-semibold text-gray-800 dark:text-gray-200 mb-2">
+            {{ 'CART_DRAWER._provider' | translate }}
+          </h4>-->
+
+          <!-- Loop over items of this provider -->
+          @if (isArray(providerItems)) {
+          @for (item of providerItems; track item) {
+            <div
+              class="flex mt-2 mb-2 rounded-lg bg-secondary-50/95 dark:bg-gray-700 dark:border-gray-800 border-secondary-50 border">
+              <div class="flex flex-col w-full">
+                <div class="flex justify-between w-full">
+                  <div class="flex p-2 box-decoration-clone">
+                    @if (item.image) {
+                      <img class="rounded-t-lg w-fit h-[100px]" src="{{item.image}}" alt="">
+                    } @else {
+                      <img class="rounded-t-lg w-fit h-[100px]" src="https://placehold.co/600x400/svg" alt="">
+                    }
+                  </div>
+                  <div class="p-2 flex items-center w-2/3">
+                    <p (click)="goToProdDetails(item)"
+                      class="text-lg text-gray-700 dark:text-gray-400 line-clamp-4 text-wrap break-all cursor-pointer"
+                      role="button" tabindex="0">
+                      {{ item.name }}
+                    </p>
+                  </div>
+                </div>
+
+                <!-- pricing -->
+                <div class="p-2 flex items-center flex-row">
+                  @if (item.options.pricing) {
+                    <div class="items-center text-sm text-white">
+                      @for (price of item.options.pricing; track price) {
+                        <div class="flex place-content-center flex-col">
+                          <span class="font-bold text-gray-900 dark:text-primary-50 mr-3">{{ price['priceType'] }}:</span>
+                          <span
+                            class="text-xs text-gray-900 dark:text-primary-50">{{ price['price']['taxIncludedAmount']['value'] }}
+                            {{ price['price']['taxIncludedAmount']['unit'] }}
+                            @if(hasKey(price, 'recurringChargePeriod')){
+                              / {{ price['recurringChargePeriod'] }}
+                            }
+                          </span>
+                        </div>
+                      }
+                    </div>
+                  }
+                </div>
+              </div>
+
+              <!-- delete button -->
+              <div class="p-2 flex items-center">
+                <button type="button" (click)="deleteProduct(item)"
+                  class="h-fit text-blue-700 hover:bg-gray-300 hover:text-white focus:ring-4 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center dark:text-blue-500 dark:hover:text-white dark:hover:bg-gray-600">
+                  <svg class="w-[12px] h-[12px] text-gray-700 dark:text-gray-400" aria-hidden="true"
+                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                      d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+                  </svg>
+                </button>
+              </div>
             </div>
-      } @empty {
-         <p class="text-gray-700 dark:text-gray-400">{{ 'CART_DRAWER._empty' | translate }}.</p>
-      } 
-      } @else {
-         <p class="text-gray-700 dark:text-gray-400">{{ 'CART_DRAWER._empty' | translate }}.</p>
+          }
+         }
+
+          <!-- go to shopping cart per provider -->
+          <div class="mt-4">
+            <button (click)="goToShoppingCart(providerItems.at(0).relatedParty.at(0).id)" type="button"
+              [disabled]="providerItems.length==0"
+              [ngClass]="providerItems.length==0 ? 'opacity-50 cursor-not-allowed' : 'cursor-pointer'"
+              class="flex w-full items-center justify-center gap-x-2 px-4 py-2 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm py-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+              <svg class="rtl:rotate-180 w-3.5 h-3.5 mr-2 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                fill="none" viewBox="0 0 14 10">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M1 5h12m0 0L9 1m4 4L9 9" />
+              </svg>
+              {{ 'CART_DRAWER._purchase' | translate }}
+            </button>
+          </div>
+        </div>
       }
-
-   </div>
-
-   <div class="mt-auto p-4 w-full grid grid-cols-1 gap-4 overflow-y-hidden">
-
-   <button (click)="goToShoppingCart();"  type="button" [disabled]="items.length==0" [ngClass]="items.length==0 ? 'opacity-50 cursor-not-allowed' : 'cursor-pointer'"
-   class="flex sticky w-full items-center justify-center gap-x-2 px-4 py-2 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm py-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-   <svg class="rtl:rotate-180 w-3.5 h-3.5 mr-2 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-      </svg>
-      {{ 'CART_DRAWER._purchase' | translate }}
-    </button>
-
-   </div>
+    } @else {
+      <p class="text-gray-700 dark:text-gray-400">{{ 'CART_DRAWER._empty' | translate }}.</p>
+    }
+  </div>
+}
 </div>
