FIX QA tickets (#119)
* FIX catalogs pagination

* FIX dashboard product limit

* FIX Ticket#831737 unable to add free product to cart from details

* FIX Ticket#831423 - Update search url when changing keywords filter

* ADD estimated price when priceType is usage on cart and checkout

--- a/src/app/shared/cart-drawer/cart-drawer.component.html
+++ b/src/app/shared/cart-drawer/cart-drawer.component.html
@@ -69,7 +69,11 @@
                         <div class="flex place-content-center flex-col">
                           <span class="font-bold text-gray-900 dark:text-primary-50 mr-3">{{ price['priceType'] }}:</span>
                           <span
-                            class="text-xs text-gray-900 dark:text-primary-50">{{ price['price']['taxIncludedAmount']['value'] }}
+                            class="text-xs text-gray-900 dark:text-primary-50">
+                            @if(price['priceType'] == 'usage'){
+                              Estimated price:
+                            }
+                            {{ price['price']['taxIncludedAmount']['value'] }}
                             {{ price['price']['taxIncludedAmount']['unit'] }}
                             @if(hasKey(price, 'recurringChargePeriod')){
                               / {{ price['recurringChargePeriod'] }}
