--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -135,7 +135,11 @@
                           @for (price of item.options.pricing; track price) {
                             <div class="flex place-content-center flex-col">
                               <span class="font-bold text-gray-900 dark:text-primary-50 mr-3">{{ price['priceType'] }}:</span>
-                              <span class="text-xs text-gray-900 dark:text-primary-50">{{ price['price']['taxIncludedAmount']['value'] }} {{ price['price']['taxIncludedAmount']['unit'] }}
+                              <span class="text-xs text-gray-900 dark:text-primary-50">
+                                @if(price['priceType'] == 'usage'){
+                                  Estimated price:
+                                }
+                                {{ price['price']['taxIncludedAmount']['value'] }} {{ price['price']['taxIncludedAmount']['unit'] }}
                                  @if(hasKey(price, 'recurringChargePeriod')){
                                     / {{ price['recurringChargePeriod'] }}
                                  }
