FIX feedback +  ADD dropdown of price types in price form + FIX QA tickets (#123)
* FIX catalogs pagination

* FIX dashboard product limit

* FIX Ticket#831737 unable to add free product to cart from details

* FIX Ticket#831423 - Update search url when changing keywords filter

* ADD estimated price when priceType is usage on cart and checkout

* FIX remove feedback popup on search pages + set price type as dropdown on offers form + fix feedback footer button + info boxes options

* FIX feedback to follow UX 95 task + FIX Ticket#831480

* FIX Ticket#832506

* FIX organization profile - now country set as mandatory

* FIX custom price plans add priceType

* FIX hide info boxes on resource update

* UPDATE cookies policy

--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -81,10 +81,11 @@
   </div>
 
 </section>
-@if(feedback && providerThemeName=='DOME'){
+
+@if(feedback){
   <feedback-modal 
-  rateMessage="How relevant are the services to your context, needs and industry challenges?"
-  writeMessage="Please elaborate on your answer"
-  type="services"
+  rateMessage="Based on your recent experience, how likely are you to recommend DOME to a colleague or a partner?"
+  writeMessage="How can we improve DOME?"
+  type="campaign"
   class="fixed inset-0 flex items-center justify-center z-40"></feedback-modal>
 }
