--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -300,7 +300,7 @@
                             @if (price.priceType == 'custom') {
                                 <div class="mx-auto bg-white border border-gray-200 dark:bg-secondary-200 dark:border-gray-800 rounded-lg shadow w-full p-4">
                                     <div class="flex justify-start mb-2">
-                                        <h2 class="text-gray-900 dark:text-white text-3xl font-extrabold mb-2">{{price.name}}</h2>
+                                        <h2 class="text-gray-900 dark:text-white text-3xl font-extrabold mb-2 break-all">{{price.name}}</h2>
                                     </div>
                                     <markdown class="dark:text-gray-200 w-full p-4 text-wrap break-all" [data]="price?.description"></markdown>
                                 </div>
@@ -323,7 +323,7 @@
                             @if (price.priceType == 'recurring') {
                                 <div class="mx-auto bg-white dark:bg-secondary-200 dark:border-gray-800 border border-gray-200 rounded-lg shadow w-full">
                                     <div class="bg-green-500 rounded-t-lg w-full text-wrap break-all">
-                                        <h5 class="flex justify-center mb-2 p-6 text-2xl font-bold tracking-tight text-gray-900 w-full">{{price.name}}</h5>
+                                        <h5 class="flex justify-center mb-2 p-6 text-2xl font-bold tracking-tight text-gray-900 w-full break-all">{{price.name}}</h5>
                                     </div>
                                     <div class="pl-4 pr-4">
                                         <markdown class="dark:text-gray-200 w-full p-4 text-wrap break-all" [data]="price?.description"></markdown>
@@ -372,7 +372,7 @@
                         @for (char of prodChars; track char.id; let idx = $index) {
                             <div class="w-full md:w-1/2 lg:w-1/3 px-4 mb-8">
                                 <div class="border border-gray-200 rounded-lg shadow bg-white dark:bg-secondary-200 dark:border-gray-800 shadow-md p-8 h-full">
-                                    <h3 class="text-2xl font-bold mb-4 dark:text-white">{{char.name}}</h3>
+                                    <h3 class="text-2xl font-bold mb-4 dark:text-white break-all">{{char.name}}</h3>
                                     @for (val of char?.productSpecCharacteristicValue; track val.value) {
                                         @if (val?.isDefault == true) {
                                             <div class="flex items-center pl-4">
