partial state added + signature compatibility with back during product adquisition

--- a/src/app/pages/user-profile/profile-sections/order-info/order-info.component.html
+++ b/src/app/pages/user-profile/profile-sections/order-info/order-info.component.html
@@ -148,6 +148,8 @@
                                     <td class="px-6 py-4 text-center align-middle">                                                
                                         @if(order.state == 'inProgress'){
                                             <span class="bg-blue-100 dark:bg-secondary-300 text-blue-600 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-blue-400">{{order.state}}</span>
+                                        } @else if(order.state ===  'partial') {
+                                                    <span class="bg-blue-100 dark:bg-secondary-300 text-purple-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-purple-500">{{order.state}}</span>
                                         } @else if(order.state ==  'completed') {
                                             <span class="bg-blue-100 dark:bg-secondary-300 text-green-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-green-500">{{order.state}}</span>
                                         } @else if(order.state == 'failed') {
@@ -245,6 +247,8 @@
                         </p>
                         @if(orderToShow.state == 'inProgress'){
                             <span class="bg-blue-100 dark:bg-secondary-100 text-blue-600 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-blue-400 w-fit">{{orderToShow.state}}</span>
+                        } @else if(orderToShow.state ==  'partial') {
+                            <span class="bg-blue-100 dark:bg-secondary-100 text-purple-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-purple-500 w-fit">{{orderToShow.state}}</span>
                         } @else if(orderToShow.state ==  'completed') {
                             <span class="bg-blue-100 dark:bg-secondary-100 text-green-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-green-500 w-fit">{{orderToShow.state}}</span>
                         } @else if(orderToShow.state == 'failed') {
