--- a/src/app/pages/product-orders/sections/order-info/order-info.component.html
+++ b/src/app/pages/product-orders/sections/order-info/order-info.component.html
@@ -281,6 +281,8 @@
                                 </p>
                                 @if(orderToShow.state === 'inProgress'){
                                     <span class="bg-blue-100 dark:bg-secondary-100 text-blue-600 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-blue-400 w-fit">{{orderToShow.state}}</span>
+                                } @else if(orderToShow.state ===  'partial') {
+                                    <span class="bg-blue-100 dark:bg-secondary-100 text-purple-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-purple-500 w-fit">{{orderToShow.state}}</span>
                                 } @else if(orderToShow.state ===  'completed') {
                                     <span class="bg-blue-100 dark:bg-secondary-100 text-green-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-green-500 w-fit">{{orderToShow.state}}</span>
                                 } @else if(orderToShow.state === 'failed') {
